test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocks
  labels:
    app: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock
  template:
    metadata:
      labels:
        app: stock
    spec:
      containers:
      - name: stockscont
        image: tthebst/stock_picker:2
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groupproject
  labels:
    app: groupproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groupproject
  template:
    metadata:
      labels:
        app: groupproject
    spec:
      containers:
      - name: groupproject-cont
        image: tthebst/groupproject:latest
        ports:
        - containerPort: 80
