deployment_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocksservice
spec:
  selector:
    app: stock
  ports:
    - name: http
      targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: groupproject-service
spec:
  selector:
    app: groupproject
  ports:
    - name: http
      targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mywebsite-service
spec:
  selector:
    app: my-web
  ports:
    - name: http
      targetPort: 80
      port: 80
