test_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocks
spec:
  selector:
    app: stocks
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
  externalIPs:
  - 192.168.1.99
