ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: stockpicker.k8s
      http:
        paths:
        - path: /
          backend:
            serviceName: stocksservice
            servicePort: http
